feat: modify new page UI

--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,4 +1,8 @@
-<form action="/todos" method="post">
-  <input type="text" name="name" placeholder="請輸入名稱">
-  <button type="submit">Create</button>
+<form action="/todos" method="POST" style="display: inline;">
+  <div class="input-group">
+    <input class="form-control" type="text" placeholder="name" name="name">
+    <div class="input-group-append">
+      <button class="btn btn-success" type="submit">Create</button>
+    </div>
+  </div>
 </form>
