--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,14 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css" crossorigin="anonymous">
 </head>
 
 <body class="bg-light">
 
   <header>
-    <nav class="navbar navbar-dark bg-primary justify-content-between">
+    <nav class="navbar navbar-dark bg-primary">
       <a class="navbar-brand" href="/">Todo List</a>
       <a class="btn btn-outline-light" href="/todos/new">Create</a>
     </nav>
